<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hiddenEmail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.example.chris.strokere.Account">

    <include
        android:id="@+id/include2"
        layout="@layout/navbar" />


    <EditText
        android:id="@+id/pEmail"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_above="@+id/pEmailBtn"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="EMAIL"
        android:inputType="textWebEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="@color/greenAccent"
        android:textColorHint="@color/greenAccent"
        android:textSize="24sp"
        android:visibility="invisible" />


    <Button
        android:id="@+id/pEmailBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pPassword"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/greenAccent"
        android:onClick="changeEmail"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Change Email"
        android:visibility="invisible" />

    <Button
        android:id="@+id/pPasswordBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"


        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:background="@color/greenAccent"
        android:onClick="changePassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Change Password"
        android:visibility="visible" />

    <EditText
        android:id="@+id/pPassword"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_above="@+id/pConfirmPassword"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="PASSWORD"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/greenAccent"
        android:textColorHint="@color/greenAccent"
        android:textSize="24sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/pConfirmPassword"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/pPasswordBtn"

        android:layout_marginBottom="62dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="CONFIRM PASSWORD"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/greenAccent"
        android:textColorHint="@color/greenAccent"
        android:textSize="24sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/pHiddenPassword"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignEnd="@+id/pEmail"
        android:layout_alignStart="@+id/pEmailBtn"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="Enter old password"
        android:inputType="textPassword"
        android:textColor="@color/greenAccent"
        android:textColorHint="@color/greenAccent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/aConfirmBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pHiddenPassword"
        android:layout_alignBottom="@+id/pPassword"
        android:layout_alignEnd="@+id/pEmailBtn"
        android:layout_alignStart="@+id/pPassword"
        android:onClick="aReauth"
        android:text="Confirm"
        android:visibility="invisible" />

    <Button
        android:id="@+id/delAccBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pConfirmPassword"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:background="@color/colorPrimary"
        android:onClick="delAccount"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Delete Account"
        android:visibility="visible" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pPassword"
        android:layout_alignStart="@+id/pEmail"
        android:layout_below="@+id/logoutBtn"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/include2"
        android:layout_alignEnd="@+id/pEmail"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:onClick="logout"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Logout" />

</android.widget.RelativeLayout>
