<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.strokere.MainActivity">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="240dp"
            android:layout_height="110dp"
            android:layout_above="@+id/emailL"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/logo_main" />

        <EditText
            android:id="@+id/emailL"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_above="@+id/passwordL"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="EMAIL ADDRESS"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColor="@color/greenAccent"
            android:textColorHint="@color/greenAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordL"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_above="@+id/forgotText"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="PASSWORD"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/greenAccent"
            android:textColorHint="@color/greenAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotText"
            android:layout_width="220dp"
            android:background="@drawable/forgotten_password"
            android:layout_gravity="center_horizontal"
            android:layout_height="32dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="forgotPassword"
            android:text="Forgotten Password?"
            android:textColor="@color/greenAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/loginBtnM"
            android:layout_centerHorizontal="true" />


        <Button
            android:id="@+id/loginBtnM"
            android:layout_width="match_parent"
            android:layout_above="@+id/registerBtnM"
            style="@style/standard_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:onClick="onLogin"
            android:text="Log in"
            android:textColor="@android:color/white"
            android:textColorHint="@color/greenAccent"
            android:textSize="45sp" />


        <Button
            android:id="@+id/bypassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/emailL"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="Bypass login"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/registerBtnM"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="OR"
            android:textColor="@android:color/black"
            android:visibility="gone" />


        <Button
            android:id="@+id/registerBtnM"
            android:layout_width="match_parent"
            style="@style/standard_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/standard_button_green"
            android:onClick="onRegister"
            android:text="Register"
            android:textColor="@android:color/white"
            android:textColorHint="@color/greenAccent"
            android:textSize="45sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/tableRow"
            android:layout_toStartOf="@+id/orText"
            android:background="#444"
            android:elevation="1dp"
            android:visibility="gone" />

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="175dp"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/orText"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/orText"
            android:background="#444"
            android:visibility="gone" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
